--- a/index.html
+++ b/index.html
@@ -28,30 +28,40 @@
         </div>
     </header>
     <main class="main-container">
-        <a href="https://ko-fi.com/luga3d/commissions">
+        <!-- DOTs -->
+        <div class="dots">
+            <span class="dot"></span>
+            <span class="dot"></span>
+            <span class="dot"></span>
+        </div>
+        <!-- commissions -->
+        <div class="title">
+            <p>Send your request, question or suggestion:</p>
+        </div>
+        <!-- <a href="https://ko-fi.com/luga3d/commissions">
             <div class="icon">
                 <img src="icons/outline_shopping_bag_white_48dp.png" alt="Shop Bag Icon">
             </div>
             <div class="label">
                 <p>Commission</p>
             </div>
-        </a>
-        <a href="https://luga3d.artstation.com/">
             <div class="icon">
-                <img src="icons/outline_image_white_48dp.png" alt="Portfolio Icon">
+                <img src="icons/outline_shopping_bag_white_48dp.png" alt="Shop Bag Icon">
             </div>
-            <div class="label">
-                <p>Portfolio</p>
-            </div>
-        </a>
+        </a> -->
+        <!-- Chat -->
         <a href="https://discord.com/users/734928789770862643">
             <div class="icon">
                 <img src="icons/outline_textsms_white_48dp.png" alt="">
             </div>
             <div class="label">
-                <p>Message-me</p>
+                <p>Chat</p>
+            </div>
+            <div class="icon">
+                <img src="icons/discord-icon.png" alt="">
             </div>
         </a>
+        <!-- Email -->
         <a href="mailto:luga3d@proton.me">
             <div class="icon">
                 <img src="icons/outline_email_white_48dp.png" alt="">
@@ -59,7 +69,32 @@
             <div class="label">
                 <p>E-mail</p>
             </div>
+            <div class="icon">
+                <img src="icons/outline_email_white_48dp.png" alt="">
+            </div>
         </a>
+        <!-- DOTs -->
+        <div class="dots">
+            <span class="dot"></span>
+            <span class="dot"></span>
+            <span class="dot"></span>
+        </div>
+        <div class="title">
+            <p>I show my work on:</p>
+        </div>
+        <!-- Portfolio -->
+        <a href="https://luga3d.artstation.com/">
+            <div class="icon">
+                <img src="icons/outline_image_white_48dp.png" alt="Portfolio Icon">
+            </div>
+            <div class="label">
+                <p>Portfolio</p>
+            </div>
+            <div class="icon">
+                <img src="icons/artstation-icon.png" alt="Portfolio Icon">
+            </div>
+        </a>
+        <!-- Instagram -->
         <a href="https://www.instagram.com/luga.3d/">
             <div class="icon">
                 <img src="icons/outline_favorite_border_white_48dp.png" alt="">
@@ -67,7 +102,20 @@
             <div class="label">
                 <p>Instagram</p>
             </div>
+            <div class="icon">
+                <img src="icons/instagram-icon.png" alt="">
+            </div>
         </a>
+        <!-- DOTs -->
+        <div class="dots">
+            <span class="dot"></span>
+            <span class="dot"></span>
+            <span class="dot"></span>
+        </div>
+        <div class="title">
+            <p>Soon, below, links to the stores: NFTs and 3D Models</p>
+        </div>
+        <!-- Lojas -->
     </main>
     <footer class="footer-container">
         <p>Luga 3D &copy; 2023.</p>
