--- a/index.html
+++ b/index.html
@@ -113,9 +113,20 @@
             <span class="dot"></span>
         </div>
         <div class="title">
-            <p>Soon, below, links to the stores: NFTs and 3D Models</p>
+            <p>NFTs and 3D Models to buy:</p>
         </div>
         <!-- Lojas -->
+        <a href="https://opensea.io/Luga3D">
+            <div class="icon">
+                <img src="icons/nft-icon-white.png" alt="">
+            </div>
+            <div class="label">
+                <p>Opensea - NFTs</p>
+            </div>
+            <div class="icon">
+                <img src="icons/opensea-icon-white.png" alt="">
+            </div>
+        </a>
     </main>
     <footer class="footer-container">
         <p>Luga 3D &copy; 2023.</p>
