--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <meta name="description"
         content="Welcome to the online portfolio of 3D artist Luga, specialized in character creation. Here you can check out their work and get in touch.">
     <title>Luga 3D - Artist</title>
-    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/modern-normalize.css">
+    <link rel="stylesheet" href="css/variables.css">
     <link rel="stylesheet" href="css/fontstyle.css">
     <link rel="stylesheet" href="css/basestyle.css">
     <link rel="stylesheet" href="css/headerstyle.css">
@@ -18,120 +19,138 @@
 </head>
 
 <body>
-    <header class="header-container">
-        <div class="logo">
-            <img class="avatar" src="imgs/meuavatar.png" alt="profile image">
-            <h1 class="tagline">Luga 3D</h1>
-        </div>
-        <div class="message">
-            <p>I'm a 3d artist who loves to create captivating characters. Let's give more personality to your room, your story and life!</p>
-        </div>
-    </header>
-    <main class="main-container">
-        <!-- DOTs -->
-        <div class="dots">
-            <span class="dot"></span>
-            <span class="dot"></span>
-            <span class="dot"></span>
-        </div>
-        <!-- commissions -->
-        <div class="title">
-            <p>Send your request, question or suggestion:</p>
-        </div>
-        <!-- <a href="https://ko-fi.com/luga3d/commissions">
-            <div class="icon">
-                <img src="icons/outline_shopping_bag_white_48dp.png" alt="Shop Bag Icon">
+    <section id="top" class="section">
+        <header class="header-container">
+            <div class="logo">
+                <img class="avatar" src="imgs/meuavatar.png" alt="profile image">
+                <h1 class="tagline">Hey! I'm Luga!</h1>
             </div>
-            <div class="label">
-                <p>Commission</p>
+            <div class="message">
+                <h2>Let's create captivating 3D characters and give our life more personality!</h2>
             </div>
-            <div class="icon">
-                <img src="icons/outline_shopping_bag_white_48dp.png" alt="Shop Bag Icon">
+        </header>
+    </section>
+    <section class="section">
+        <main class="main-container">
+            <!-- commissions -->
+            <div class="title">
+                <h3>Requests, Questions or Suggestions</h3>
             </div>
-        </a> -->
-        <!-- Chat -->
-        <a href="https://discord.com/users/734928789770862643">
-            <div class="icon">
-                <img src="icons/outline_textsms_white_48dp.png" alt="">
+            <!-- Chat -->
+            <a href="https://discord.com/users/734928789770862643">
+                <div class="icon">
+                    <img src="icons/outline_textsms_white_48dp.png" alt="">
+                </div>
+                <div class="label">
+                    <p>Chat</p>
+                </div>
+                <div class="icon">
+                    <img src="icons/discord-icon.png" alt="">
+                </div>
+            </a>
+            <!-- Email -->
+            <a href="mailto:luga3d@proton.me">
+                <div class="icon">
+                    <img src="icons/outline_email_white_48dp.png" alt="">
+                </div>
+                <div class="label">
+                    <p>E-mail</p>
+                </div>
+                <div class="icon">
+                    <img src="icons/outline_email_white_48dp.png" alt="">
+                </div>
+            </a>
+            <!-- Portfolio -->
+            <div class="title">
+                <h3>Projects</h3>
             </div>
-            <div class="label">
-                <p>Chat</p>
+            <a href="https://luga3d.artstation.com/">
+                <div class="icon">
+                    <img src="icons/outline_image_white_48dp.png" alt="Portfolio Icon">
+                </div>
+                <div class="label">
+                    <p>Portfolio</p>
+                </div>
+                <div class="icon">
+                    <img src="icons/artstation-icon.png" alt="Portfolio Icon">
+                </div>
+            </a>
+            <!-- Social -->
+            <div class="title">
+                <h3>Social</h3>
             </div>
-            <div class="icon">
-                <img src="icons/discord-icon.png" alt="">
+            <!-- Instagram -->
+            <a href="https://www.instagram.com/luga.3d/">
+                <div class="icon">
+                    <img src="icons/outline_favorite_border_white_48dp.png" alt="">
+                </div>
+                <div class="label">
+                    <p>Instagram</p>
+                </div>
+                <div class="icon">
+                    <img src="icons/instagram-icon.png" alt="">
+                </div>
+            </a>
+            <!-- Lojas -->
+            <div class="title">
+                <h3>Stores</h3>
             </div>
-        </a>
-        <!-- Email -->
-        <a href="mailto:luga3d@proton.me">
-            <div class="icon">
-                <img src="icons/outline_email_white_48dp.png" alt="">
-            </div>
-            <div class="label">
-                <p>E-mail</p>
-            </div>
-            <div class="icon">
-                <img src="icons/outline_email_white_48dp.png" alt="">
-            </div>
-        </a>
-        <!-- DOTs -->
-        <div class="dots">
-            <span class="dot"></span>
-            <span class="dot"></span>
-            <span class="dot"></span>
-        </div>
-        <div class="title">
-            <p>I show my work on:</p>
-        </div>
-        <!-- Portfolio -->
-        <a href="https://luga3d.artstation.com/">
-            <div class="icon">
-                <img src="icons/outline_image_white_48dp.png" alt="Portfolio Icon">
-            </div>
-            <div class="label">
-                <p>Portfolio</p>
-            </div>
-            <div class="icon">
-                <img src="icons/artstation-icon.png" alt="Portfolio Icon">
-            </div>
-        </a>
-        <!-- Instagram -->
-        <a href="https://www.instagram.com/luga.3d/">
-            <div class="icon">
-                <img src="icons/outline_favorite_border_white_48dp.png" alt="">
-            </div>
-            <div class="label">
-                <p>Instagram</p>
-            </div>
-            <div class="icon">
-                <img src="icons/instagram-icon.png" alt="">
-            </div>
-        </a>
-        <!-- DOTs -->
-        <div class="dots">
-            <span class="dot"></span>
-            <span class="dot"></span>
-            <span class="dot"></span>
-        </div>
-        <div class="title">
-            <p>NFTs and 3D Models to buy:</p>
-        </div>
-        <!-- Lojas -->
-        <a href="https://opensea.io/Luga3D">
-            <div class="icon">
-                <img src="icons/nft-icon-white.png" alt="">
-            </div>
-            <div class="label">
-                <p>Opensea - NFTs</p>
-            </div>
-            <div class="icon">
-                <img src="icons/opensea-icon-white.png" alt="">
-            </div>
-        </a>
-    </main>
-    <footer class="footer-container">
-        <p>Luga 3D &copy; 2023.</p>
-        <p>Todos os direitos reservados.</p>
-    </footer>
+            <a href="https://luga3d.gumroad.com/">
+                <div class="icon">
+                </div>
+                <div class="label">
+                    <p>Gumroad</p>
+                </div>
+                <div class="icon">
+                </div>
+            </a>
+            <a href="https://www.artstation.com/luga3d/store">
+                <div class="icon">
+                </div>
+                <div class="label">
+                    <p>ArtStation</p>
+                </div>
+                <div class="icon">
+                </div>
+            </a>
+            <a href="https://www.renderhub.com/luga-digital">
+                <div class="icon">
+                </div>
+                <div class="label">
+                    <p>RenderHub</p>
+                </div>
+                <div class="icon">
+                </div>
+            </a>
+            <a href="https://www.turbosquid.com/Search/Artists/Luga3D">
+                <div class="icon">
+                </div>
+                <div class="label">
+                    <p>TurboSquid</p>
+                </div>
+                <div class="icon">
+                </div>
+            </a>
+            <a href="https://opensea.io/Luga3D">
+                <div class="icon">
+                    <img src="icons/nft-icon-white.png" alt="">
+                </div>
+                <div class="label">
+                    <p>Opensea - NFTs</p>
+                </div>
+                <div class="icon">
+                    <img src="icons/opensea-icon-white.png" alt="">
+                </div>
+            </a>
+        </main>
+    </section>
+    <section class="section">
+        <footer class="footer-container">
+            <a href="#top">Back to top</a>
+            <p>Luga 3D &copy; 2023.</p>
+            <p>All rights reserved.</p>
+        </footer>
+    </section>
 </body>
 
 </html>
